--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hacker Times</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- NEWSPAPER CONTAINER -->
@@ -18,13 +19,13 @@
     <nav>
       <ul>
         <li><a href="#">HTML & CSS</a></li>
-        <li><a href="#">UX & UI</a></li>
-        <li><a href="#">JAVASCRIPT</a></li>
-        <li><a href="#">EXPRESS</a></li>
-        <li><a href="#">MONGODB</a></li>
-        <li><a href="#">REACT</a></li>
-        <li><a href="#">CYBERSECURITY</a></li>
-        <li><a href="#">PYTHON</a></li>
+        <a href="#">UX & UI</a></li>
+        <a href="#">JAVASCRIPT</a></li>
+        <a href="#">EXPRESS</a></li>
+        <a href="#">MONGODB</a></li>
+        <a href="#">REACT</a></li>
+        <a href="#">CYBERSECURITY</a></li>
+        <a href="#">PYTHON</a></li>
       </ul>
     </nav>
     <!-- front page article -->
