add dark gray border to navigation

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <!-- navigation -->
     <nav>
       <ul>
-        <li><a href="#">HTML & CSS</a></li>
+        <li>
+        <a href="#">HTML & CSS</a></li>
         <a href="#">UX & UI</a></li>
         <a href="#">JAVASCRIPT</a></li>
         <a href="#">EXPRESS</a></li>
